force-app/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
</CustomObject>