force-app/main/default/objects/Opportunity/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduling Labs</fullName>
            </value>
            <value>
                <fullName>UW Review</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>First App Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>