force-app/main/default/objects/Opportunity/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <label>Insurance Company</label>
    <type>Text</type>
    <length>100</length>
    <defaultValue>&quot;Transamerica&quot;</defaultValue>
</CustomField>