force-app/main/default/objects/Opportunity/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <type>Text</type>
    <length>20</length>
    <description>Social Security Number. NOTE: org has no Classic/Shield Encryption enabled, so stored as Text(20). MUST be protected via Field-Level Security.</description>
    <inlineHelpText>Sensitive: protected via FLS. Last-four masking not available without Shield Encryption.</inlineHelpText>
</CustomField>